--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,5 @@
 # Android
+
 # Build your Android project with Gradle.
 # Add steps that test, sign, and distribute the APK, save build artifacts, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/android
@@ -10,6 +11,16 @@ pool:
   vmImage: 'macos-latest'
 
 steps:
+- task: semver-bump@1
+  inputs:
+    VersionVariable: 'APP_BLA'
+    IncrementLevel: 'major'
+- task: Bash@3
+  displayName: Set build properties
+  inputs:
+    targetType: 'inline'
+    script: |
+      echo $APP_BLA
 - task: Gradle@2
   inputs:
     workingDirectory: ''
